syntax = "proto3";

package quic.backbone.v1;

option go_package = "github.com/voilet/quic-flow/pkg/protocol;protocol";

// ==================== 任务配置消息 ====================

// 任务配置推送消息（服务端 -> 客户端）
message TaskConfigPush {
    int64 config_version = 1;        // 配置版本号
    ConfigAction action = 2;          // 操作类型
    repeated TaskConfig tasks = 3;     // 任务配置列表
    int64 timestamp = 4;              // 时间戳
}

// 配置操作类型
enum ConfigAction {
    CONFIG_ACTION_UNSPECIFIED = 0;
    CONFIG_ACTION_CREATE = 1;         // 创建
    CONFIG_ACTION_UPDATE = 2;         // 更新
    CONFIG_ACTION_DELETE = 3;        // 删除
    CONFIG_ACTION_REPLACE = 4;        // 全量替换
}

// 任务配置
message TaskConfig {
    string task_id = 1;               // 任务ID
    string task_name = 2;              // 任务名称
    ExecutorType executor_type = 3;    // 执行器类型
    string executor_config = 4;        // 执行器配置(JSON)
    string cron_expr = 5;              // Cron表达式
    int32 timeout = 6;                 // 超时时间(秒)
    int32 retry_count = 7;             // 重试次数
    int32 retry_interval = 8;          // 重试间隔(秒)
    int32 concurrency = 9;              // 最大并发数
    bool enabled = 10;                 // 是否启用
}

// 执行器类型
enum ExecutorType {
    EXECUTOR_TYPE_UNSPECIFIED = 0;
    EXECUTOR_TYPE_SHELL = 1;          // Shell脚本
    EXECUTOR_TYPE_HTTP = 2;            // HTTP请求
    EXECUTOR_TYPE_PLUGIN = 3;          // 插件
}

// 任务配置拉取请求（客户端 -> 服务端）
message TaskConfigPull {
    string client_id = 1;              // 客户端ID
    int64 current_version = 2;         // 当前配置版本
}

// 任务配置拉取响应（服务端 -> 客户端）
message TaskConfigPullResponse {
    int64 config_version = 1;         // 配置版本号
    repeated TaskConfig tasks = 2;     // 任务配置列表
    bool has_update = 3;               // 是否有更新
    int64 timestamp = 4;              // 时间戳
}

// ==================== 任务执行消息 ====================

// 任务执行消息（服务端 -> 客户端）
message TaskExecution {
    string execution_id = 1;           // 执行ID
    string task_id = 2;                // 任务ID
    string task_name = 3;              // 任务名称
    ExecutorType executor_type = 4;    // 执行器类型
    string executor_config = 5;        // 执行器配置(JSON)
    int32 timeout = 6;                 // 超时时间(秒)
    int32 retry_count = 7;             // 重试次数
    int32 retry_interval = 8;          // 重试间隔(秒)
    ExecutionType execution_type = 9;   // 执行类型
    int64 timestamp = 10;              // 时间戳
}

// 执行类型
enum ExecutionType {
    EXECUTION_TYPE_UNSPECIFIED = 0;
    EXECUTION_TYPE_SCHEDULED = 1;     // 定时执行
    EXECUTION_TYPE_MANUAL = 2;        // 手动触发
}

// 任务进度消息（客户端 -> 服务端）
message TaskProgress {
    string execution_id = 1;           // 执行ID
    string task_id = 2;                // 任务ID
    ExecutionStatus status = 3;         // 执行状态
    int32 progress = 4;                // 进度百分比(0-100)
    string output = 5;                 // 输出内容
    int64 timestamp = 6;               // 时间戳
}

// 执行状态
enum ExecutionStatus {
    EXECUTION_STATUS_UNSPECIFIED = 0;
    EXECUTION_STATUS_PENDING = 1;     // 待执行
    EXECUTION_STATUS_RUNNING = 2;     // 执行中
    EXECUTION_STATUS_SUCCESS = 3;      // 成功
    EXECUTION_STATUS_FAILED = 4;        // 失败
    EXECUTION_STATUS_TIMEOUT = 5;      // 超时
    EXECUTION_STATUS_CANCELLED = 6;     // 已取消
}

// 任务结果消息（客户端 -> 服务端）
message TaskResult {
    string execution_id = 1;           // 执行ID
    string task_id = 2;                // 任务ID
    ExecutionStatus status = 3;         // 执行状态
    int32 exit_code = 4;               // 退出码
    string output = 5;                  // 执行输出
    string error_msg = 6;              // 错误信息
    int64 duration_ms = 7;            // 执行耗时(毫秒)
    int32 retry_count = 8;             // 重试次数
    int64 timestamp = 9;               // 时间戳
}

// ==================== 状态同步消息 ====================

// 按天统计数据上报（客户端 -> 服务端）
message DailyStatsReport {
    string client_id = 1;              // 客户端ID
    string date = 2;                   // 日期(YYYY-MM-DD)
    repeated TaskStats task_stats = 3; // 任务统计列表
    int64 report_time = 4;             // 上报时间戳
}

// 任务统计
message TaskStats {
    string task_id = 1;                // 任务ID
    string task_name = 2;              // 任务名称
    int32 success_count = 3;           // 成功次数
    int32 failure_count = 4;           // 失败次数
    int32 timeout_count = 5;           // 超时次数
    int32 cancelled_count = 6;         // 取消次数
    int64 total_duration_ms = 7;       // 总耗时(毫秒)
    int32 max_duration_ms = 8;         // 最大耗时(毫秒)
    int32 min_duration_ms = 9;         // 最小耗时(毫秒)
    map<string, int32> hourly_distribution = 10; // 小时分布
}

// 离线数据同步请求（客户端 -> 服务端）
message OfflineSyncRequest {
    string client_id = 1;              // 客户端ID
    int64 last_sync_time = 2;          // 上次成功同步时间
    int32 record_count = 3;            // 待同步记录数
}

// 离线数据同步响应（服务端 -> 客户端）
message OfflineSyncResponse {
    bool success = 1;                  // 是否成功
    string message = 2;                // 消息
    int64 synced_count = 3;            // 成功同步的记录数
    int64 server_time = 4;             // 服务端时间
}
